替代ListOfRegionAndPracticeBase