@@ -7,6 +7,9 @@ import action.Action;
 import action.Manager;
 import obj.*;
 import obj.annualTable.*;
+import obj.annualTable.list.Leaf;
+import obj.annualTable.list.List_Region_PracticeBase;
+import obj.annualTable.list.PracticeBaseWithRegion;
 import obj.staticObject.PracticeBase;
 import obj.staticSource.Major;
 
@@ -26,22 +29,22 @@ public class PlanAllDesign extends Action{
 	private int[][] majorsRegionsHxCounts;
 	private Boolean[][] majorsRegionsCountsIsError;
 	private int lastNHxRegionIndex=-1;
-	private ListOfRegionAndPracticeBases regionAndPracticeBase;
+	private List_Region_PracticeBase list;
 	private int[][][] numbers;
 	static public final String SessionMajorsKey="PlanAllDesign_Majors";
 	static public final String SessionListKey="PlanAllDesign_List";
 
 	
-	public ListOfRegionAndPracticeBases getRegionAndPracticeBase(){return this.regionAndPracticeBase;}
+	public List_Region_PracticeBase getList(){return this.list;}
 	public int[][][] getNumbers(){
-		if(this.majors==null || this.regionAndPracticeBase==null)
+		if(this.majors==null || this.list==null)
 			return this.numbers=null;
 		if(this.numbers!=null) return this.numbers;
 		this.numbers=new int[this.majors.size()]
-				[this.regionAndPracticeBase.getList().size()][];
+				[this.list.getList().size()][];
 		for(int i=0;i<this.majors.size();i++)
-			for(int j=0;j<this.regionAndPracticeBase.getList().size();j++)
-				this.numbers[i][j]=new int[this.regionAndPracticeBase.getList().get(j).getList().size()];
+			for(int j=0;j<this.list.getList().size();j++)
+				this.numbers[i][j]=new int[this.list.getList().get(j).getList().size()];
 		Map<String,Integer> majorsMap=new HashMap<String,Integer>();
 		for(int i=0;i<this.majors.size();i++)
 			majorsMap.put(this.majors.get(i).getName(),i);
@@ -54,7 +57,7 @@ public class PlanAllDesign extends Action{
 			return this.numbers=null;
 		}
 		for(Plan p:plans){
-			int[] index=this.regionAndPracticeBase.indexOf(p.getPracticeBase());
+			int[] index=this.list.indexOf(p.getPracticeBase());
 			if(index!=null && index.length>=2)
 				this.numbers[majorsMap.get(p.getMajor())][index[0]][index[1]]=
 				p.getNumber();
@@ -101,9 +104,9 @@ public class PlanAllDesign extends Action{
 		if(this.majorsRegionsHxCounts==null) try{
 			this.majorsRegionsHxCounts=new int[this.getMajors().size()][];
 			int i=-1;for(Major m:this.getMajors()) {
-				this.majorsRegionsHxCounts[++i]=new int[this.getRegionAndPracticeBase().getList().size()];
+				this.majorsRegionsHxCounts[++i]=new int[this.getList().getList().size()];
 				for(int j=0;j<this.majorsRegionsHxCounts[i].length;j++) {
-					PracticeBase pb=this.getRegionAndPracticeBase().getList().get(j).getList().get(0).getPracticeBase();
+					PracticeBase pb=this.getList().getList().get(j).getList().get(0).getFirst();
 					this.majorsRegionsHxCounts[i][j]=Base.list(Student.class,new Restraint(
 						Field.getFields(Student.class,"year","major","hxyx","province"),
 						new Object[]{this.getAnnual().getYear(),m.getName(),true,pb.getProvince()}))
@@ -120,21 +123,21 @@ public class PlanAllDesign extends Action{
 		if(this.majorsRegionsCountsIsError==null) try{
 			this.majorsRegionsCountsIsError=new Boolean[this.getMajors().size()][];
 			for(int i=0;i<this.majorsRegionsCountsIsError.length;i++){
-				this.majorsRegionsCountsIsError[i]=new Boolean[this.getRegionAndPracticeBase().getList().size()];
+				this.majorsRegionsCountsIsError[i]=new Boolean[this.getList().getList().size()];
 				//先计算北京及周边地区实习大区
 				int cnt=0;
 				for(int j=0;j<this.majorsRegionsCountsIsError[i].length;j++) {
-					if(!this.getRegionAndPracticeBase().getList().get(j).getList().get(0).getPracticeBase().getHx())
-						for(int k=0;k<this.getRegionAndPracticeBase().getList().get(j).getList().size();k++)
+					if(!this.getList().getList().get(j).getList().get(0).getFirst().getHx())
+						for(int k=0;k<this.getList().getList().get(j).getList().size();k++)
 							cnt+=this.getNumbers()[i][j][k];
 				}
 				int CMP=Integer.compare(cnt,this.getMajorsNHxCounts()[i]);
 				//在计算回乡实习大区
 				for(int j=0;j<this.majorsRegionsCountsIsError[i].length;j++) {
-					PracticeBase pb=this.getRegionAndPracticeBase().getList().get(j).getList().get(0).getPracticeBase();
+					PracticeBase pb=this.getList().getList().get(j).getList().get(0).getFirst();
 					int cmp=cnt=0;
 					if(pb.getHx()) {
-						for(int k=0;k<this.getRegionAndPracticeBase().getList().get(j).getList().size();k++)
+						for(int k=0;k<this.getList().getList().get(j).getList().size();k++)
 							cnt+=this.getNumbers()[i][j][k];
 						cmp=Integer.compare(cnt,this.getMajorsRegionsHxCounts()[i][j]);
 					}else cmp=CMP;
@@ -150,8 +153,8 @@ public class PlanAllDesign extends Action{
 	public int getLastNHxRegionIndex() {
 		if(lastNHxRegionIndex>=0) return this.lastNHxRegionIndex;
 		int i=0,res=-1;
-		try{for(ListOfRegionAndPracticeBases.RegionPair rp:this.getRegionAndPracticeBase().getList()) {
-				if(!rp.getList().get(0).getPracticeBase().getHx())
+		try{for(Leaf<Region,PracticeBaseWithRegion> rp:this.getList().getList()) {
+				if(!rp.getList().get(0).getFirst().getHx())
 					res=i;
 				i++;
 		}}catch (NullPointerException | IndexOutOfBoundsException e){
@@ -166,14 +169,14 @@ public class PlanAllDesign extends Action{
 	public PlanAllDesign(){
 		super();
 		System.out.println(">> PlanAllDesign:constructor > year="+this.getAnnual().getYear());
-		this.regionAndPracticeBase=Manager.loadSession(ListOfRegionAndPracticeBases.class, SessionListKey);
+		this.list=Manager.loadSession(List_Region_PracticeBase.class, SessionListKey);
 		this.majors=Manager.loadSession(List.class, SessionMajorsKey);
 		this.getNumbers();
 	}
 	
 	public String display(){
 		try {
-			this.regionAndPracticeBase=new ListOfRegionAndPracticeBases(this.getAnnual().getYear(),/*containsNullRegion*/false);
+			this.list=new List_Region_PracticeBase(this.getAnnual().getYear(),/*containsNullRegion*/false);
 		} catch (SQLException | IllegalArgumentException | InstantiationException e) {
 			return this.jumpBackWithTips("数据库读取实习基地及大区信息失败",e);
 		}
@@ -189,8 +192,8 @@ public class PlanAllDesign extends Action{
 			return this.jumpBackWithTips("数据库读取回生源地实习人数失败！");
 		if(getMajorsRegionsCountsIsError()==null)
 			return this.jumpBackWithTips("数据库检测实习生人数与规划人数失败！");
-		if(this.regionAndPracticeBase!=null)
-			Manager.saveSession(SessionListKey,this.regionAndPracticeBase);
+		if(this.list!=null)
+			Manager.saveSession(SessionListKey,this.list);
 		if(this.majors!=null)
 			Manager.saveSession(SessionMajorsKey,this.majors);
 		return NONE;
@@ -200,7 +203,7 @@ public class PlanAllDesign extends Action{
 	public String execute(){
 		boolean ok=false;
 		StringBuilder error=new StringBuilder();
-		if(this.regionAndPracticeBase==null||this.numbers==null||this.majors==null)
+		if(this.list==null||this.numbers==null||this.majors==null)
 			return display();
 		for(int i=0;i<this.numbers.length;i++){
 			for(int j=0;j<this.numbers[i].length;j++){
@@ -210,7 +213,7 @@ public class PlanAllDesign extends Action{
 					Plan p=new Plan();
 					p.setYear(this.getAnnual().getYear());
 					p.setMajor(this.majors.get(i).getName());
-					p.setPracticeBase(this.regionAndPracticeBase.getList().get(j).getList().get(k).getPracticeBase().getName());
+					p.setPracticeBase(this.list.getList().get(j).getList().get(k).getFirst().getName());
 					try {
 						if(p.existAndLoad()){
 							if(p.getNumber()!=num){
@@ -229,21 +232,21 @@ public class PlanAllDesign extends Action{
 					} catch (IllegalArgumentException | IllegalAccessException | SQLException e) {
 						e.printStackTrace();
 						error.append("\n("+this.getMajors().get(i)+","+
-						this.regionAndPracticeBase.getList().get(j).getRegion().getDescription()+","+
-						this.regionAndPracticeBase.getList().get(j).getList().get(k).getPracticeBase().getDescription()+
+						this.list.getList().get(j).getT().getDescription()+","+
+						this.list.getList().get(j).getList().get(k).getFirst().getDescription()+
 						")"+e.getMessage());
 						continue;
 					}
 				}
 			}
 		}
-		for(ListOfRegionAndPracticeBases.RegionPair rp:this.regionAndPracticeBase.getList()) {
-			for(ListOfRegionAndPracticeBases.RegionPair.PracticeBasePair pair:rp.getList()) try {
-				pair.getPracticeBase().update();
+		for(Leaf<Region,PracticeBaseWithRegion> rp:this.list.getList()) {
+			for(PracticeBaseWithRegion pair:rp.getList()) try {
+				pair.getFirst().update();
 				ok=true;
 			}catch(IllegalArgumentException | SQLException e) {
 				e.printStackTrace();
-				error.append("\n"+pair.getPracticeBase().getDescription()+"备注修改失败！("+e.getMessage()+")");
+				error.append("\n"+pair.getFirst().getDescription()+"备注修改失败！("+e.getMessage()+")");
 			}
 		}
 		if(!ok)
